[gd_scene load_steps=5 format=3 uid="uid://ca1ifxu63elb6"]

[ext_resource type="Script" path="res://core/scene/Main.gd" id="1_c4ry3"]
[ext_resource type="PackedScene" uid="uid://d1p5dq5fwm6v2" path="res://core/scene/game/game.tscn" id="2_3xn8j"]
[ext_resource type="Texture2D" uid="uid://dy0de8bqdo0cn" path="res://base/texture DELETE/spaceship3.png" id="3_efogp"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_mhpc1"]
polygon = PackedVector2Array(97.1004, -70.8557, -57.0208, -77.4637, -110.808, 60.6521, 34.1357, 86.254)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c4ry3")

[node name="CellName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -81.0
offset_top = -26.0
grow_horizontal = 0
grow_vertical = 0
text = "asdasdasa"

[node name="Tick" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -53.0
offset_right = 1.0
offset_bottom = -27.0
grow_horizontal = 0
grow_vertical = 0
text = "asdasdasa"

[node name="ChunkActive" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -82.0
offset_right = 1.0
offset_bottom = -56.0
grow_horizontal = 0
grow_vertical = 0
text = "asdasdasa"

[node name="GridPosition" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -109.0
offset_right = 2.0
offset_bottom = -83.0
grow_horizontal = 0
grow_vertical = 0
text = "asdasdasa"

[node name="Game" parent="." instance=ExtResource("2_3xn8j")]

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
visible = false
position = Vector2(311, -6)
shadow_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(353, 273)
texture = ExtResource("3_efogp")

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite2D"]
rotation = -0.998671
occluder = SubResource("OccluderPolygon2D_mhpc1")
